--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,14 +125,12 @@ run-material-composition:
 
 run-ddsim:
   stage: test
-  needs: []
+  needs:
+    - build-odd
   script:
     - ci/download_geant4_data.sh
-    - mkdir build
-    - cmake -S . -B build -GNinja
-    - cmake --build build
     - source /usr/local/bin/thisdd4hep.sh
-    - export LD_LIBRARY_PATH=$PWD/build/factory:$LD_LIBRARY_PATH
+    - source odd-install/bin/this_odd.sh
     - python3 $(which ddsim) --enableGun --numberOfEvents 100 --gun.thetaMin 0.1415 --gun.thetaMax 3.0  --gun.distribution uniform --compactFile xml/OpenDataDetector.xml --outputFile ddsim.root
     - sha1sum ddsim.root
     - sha1sum -c ci/reference/ddsim.root.sha1
