--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -183,13 +183,13 @@ export-geometry:
     - node . ../export_geometry/ODD.root -c ../ci/export_geometry_config.json
     - mv ODD.gltf ../export_geometry/.
 
-validate-calo:
+validate-ecal-barrel:
   stage: analysis
   needs:
     - build-odd
   artifacts:
     paths:
-      - analysis_calo
+      - analysis_ecal_barrel
     expire_in: 1 month
   when: manual
   script:
@@ -197,14 +197,38 @@ validate-calo:
     - /usr/local/bin/geant4-config --install-datasets
     - source /usr/local/bin/geant4.sh
     - source /usr/local/bin/thisdd4hep.sh
-    - mkdir analysis_calo
-    - cd analysis_calo
+    - mkdir analysis_ecal_barrel
+    - cd analysis_ecal_barrel
     - ddsim --enableGun --numberOfEvents 500 --gun.energy 5000 --gun.particle gamma --gun.thetaMin 1.57 --gun.thetaMax 1.57 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta1.57_500events_5GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 500 --gun.energy 10000 --gun.particle gamma --gun.thetaMin 1.57 --gun.thetaMax 1.57 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta1.57_500events_10GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 500 --gun.energy 20000 --gun.particle gamma --gun.thetaMin 1.57 --gun.thetaMax 1.57 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta1.57_500events_20GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 250 --gun.energy 50000 --gun.particle gamma --gun.thetaMin 1.57 --gun.thetaMax 1.57 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta1.57_250events_50GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 100 --gun.energy 100000 --gun.particle gamma --gun.thetaMin 1.57 --gun.thetaMax 1.57 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta1.57_100events_100GeV_edm4hep.root
     - pip install -r ../ci/requirements.txt
-    - cd ../analysis_calo
+    - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root'  \;
+    - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
+
+validate-ecal_endcap:
+  stage: analysis
+  needs:
+    - build-odd
+  artifacts:
+    paths:
+      - analysis_ecal_endcap
+    expire_in: 1 month
+  when: manual
+  script:
+    - source odd-install/bin/this_odd.sh
+    - /usr/local/bin/geant4-config --install-datasets
+    - source /usr/local/bin/geant4.sh
+    - source /usr/local/bin/thisdd4hep.sh
+    - mkdir analysis_ecal_endcap
+    - cd analysis_ecal_endcap
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 5000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_500events_5GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 10000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_500events_10GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 20000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_500events_20GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 250 --gun.energy 50000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_250events_50GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 100 --gun.energy 100000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_100events_100GeV_edm4hep.root
+    - pip install -r ../ci/requirements.txt
     - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root'  \;
     - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
