Introduce test for both edcaps

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -208,13 +208,13 @@ validate-ecal-barrel:
     - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root'  \;
     - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
 
-validate-ecal_endcap:
+validate-ecal_rightEndcap:
   stage: analysis
   needs:
     - build-odd
   artifacts:
     paths:
-      - analysis_ecal_endcap
+      - analysis_ecal_rightEndcap
     expire_in: 1 month
   when: manual
   script:
@@ -222,13 +222,88 @@ validate-ecal_endcap:
     - /usr/local/bin/geant4-config --install-datasets
     - source /usr/local/bin/geant4.sh
     - source /usr/local/bin/thisdd4hep.sh
-    - mkdir analysis_ecal_endcap
-    - cd analysis_ecal_endcap
+    - mkdir analysis_ecal_rightEndcap
+    - cd analysis_ecal_rightEndcap
     - ddsim --enableGun --numberOfEvents 500 --gun.energy 5000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_500events_5GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 500 --gun.energy 10000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_500events_10GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 500 --gun.energy 20000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_500events_20GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 250 --gun.energy 50000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_250events_50GeV_edm4hep.root
     - ddsim --enableGun --numberOfEvents 100 --gun.energy 100000 --gun.particle gamma --gun.thetaMin 0.15 --gun.thetaMax 0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.15_100events_100GeV_edm4hep.root
+    - pip install -r ../ci/requirements.txt
+    - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root --endcap'  \;
+    - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
+
+validate-ecal_rightEndcap_theta0.25:
+  stage: analysis
+  needs:
+    - build-odd
+  artifacts:
+    paths:
+      - analysis_ecal_rightEndcap_0.25
+    expire_in: 1 month
+  when: manual
+  script:
+    - source odd-install/bin/this_odd.sh
+    - /usr/local/bin/geant4-config --install-datasets
+    - source /usr/local/bin/geant4.sh
+    - source /usr/local/bin/thisdd4hep.sh
+    - mkdir analysis_ecal_rightEndcap_0.25
+    - cd analysis_ecal_rightEndcap_0.25
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 5000 --gun.particle gamma --gun.thetaMin 0.25 --gun.thetaMax 0.25 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.25_500events_5GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 10000 --gun.particle gamma --gun.thetaMin 0.25 --gun.thetaMax 0.25 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.25_500events_10GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 20000 --gun.particle gamma --gun.thetaMin 0.25 --gun.thetaMax 0.25 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.25_500events_20GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 250 --gun.energy 50000 --gun.particle gamma --gun.thetaMin 0.25 --gun.thetaMax 0.25 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.25_250events_50GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 100 --gun.energy 100000 --gun.particle gamma --gun.thetaMin 0.25 --gun.thetaMax 0.25 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.25_100events_100GeV_edm4hep.root
+    - pip install -r ../ci/requirements.txt
+    - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root --endcap'  \;
+    - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
+
+validate-ecal_rightEndcap_theta0.5:
+  stage: analysis
+  needs:
+    - build-odd
+  artifacts:
+    paths:
+      - analysis_ecal_rightEndcap_0.5
+    expire_in: 1 month
+  when: manual
+  script:
+    - source odd-install/bin/this_odd.sh
+    - /usr/local/bin/geant4-config --install-datasets
+    - source /usr/local/bin/geant4.sh
+    - source /usr/local/bin/thisdd4hep.sh
+    - mkdir analysis_ecal_rightEndcap_0.5
+    - cd analysis_ecal_rightEndcap_0.5
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 5000 --gun.particle gamma --gun.thetaMin 0.5 --gun.thetaMax 0.5 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.5_500events_5GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 10000 --gun.particle gamma --gun.thetaMin 0.5 --gun.thetaMax 0.5 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.5_500events_10GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 20000 --gun.particle gamma --gun.thetaMin 0.5 --gun.thetaMax 0.5 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.5_500events_20GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 250 --gun.energy 50000 --gun.particle gamma --gun.thetaMin 0.5 --gun.thetaMax 0.5 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.5_250events_50GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 100 --gun.energy 100000 --gun.particle gamma --gun.thetaMin 0.5 --gun.thetaMax 0.5 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_theta0.5_100events_100GeV_edm4hep.root
+    - pip install -r ../ci/requirements.txt
+    - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root --endcap'  \;
+    - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
+
+validate-ecal_leftEndcap:
+  stage: analysis
+  needs:
+    - build-odd
+  artifacts:
+    paths:
+      - analysis_ecal_leftEndcap
+    expire_in: 1 month
+  when: manual
+  script:
+    - source odd-install/bin/this_odd.sh
+    - /usr/local/bin/geant4-config --install-datasets
+    - source /usr/local/bin/geant4.sh
+    - source /usr/local/bin/thisdd4hep.sh
+    - mkdir analysis_ecal_leftEndcap
+    - cd analysis_ecal_leftEndcap
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 5000 --gun.particle gamma --gun.thetaMin -0.15 --gun.thetaMax -0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_thetaM0.15_500events_5GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 10000 --gun.particle gamma --gun.thetaMin -0.15 --gun.thetaMax -0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_thetaM0.15_500events_10GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 500 --gun.energy 20000 --gun.particle gamma --gun.thetaMin -0.15 --gun.thetaMax -0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_thetaM0.15_500events_20GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 250 --gun.energy 50000 --gun.particle gamma --gun.thetaMin -0.15 --gun.thetaMax -0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_thetaM0.15_250events_50GeV_edm4hep.root
+    - ddsim --enableGun --numberOfEvents 100 --gun.energy 100000 --gun.particle gamma --gun.thetaMin -0.15 --gun.thetaMax -0.15 --gun.distribution uniform --compactFile ../xml/OpenDataDetector.xml --outputFile ODD_gamma_thetaM0.15_100events_100GeV_edm4hep.root
     - pip install -r ../ci/requirements.txt
     - find . -type f -name '*edm4hep.root' -exec sh -c 'python3 ../ci/analyse_single_shower.py -i {} -o "$(basename {} edm4hep.root)"results.root --endcap'  \;
     - python3 ../ci/analyse_combine_showers.py -i *_results.root -o combined_resolution.root
