default to digi time smearing in pixel; format json

--- a/config/odd-digi-geometric-config.json
+++ b/config/odd-digi-geometric-config.json
@@ -9,10 +9,7 @@
       "value": {
         "geometric": {
           "digital": false,
-          "indices": [
-            0,
-            1
-          ],
+          "indices": [0, 1],
           "segmentation": {
             "binningdata": [
               {
@@ -43,10 +40,7 @@
       "value": {
         "geometric": {
           "digital": true,
-          "indices": [
-            0,
-            1
-          ],
+          "indices": [0, 1],
           "segmentation": {
             "binningdata": [
               {
@@ -77,10 +71,7 @@
       "value": {
         "geometric": {
           "digital": true,
-          "indices": [
-            0,
-            1
-          ],
+          "indices": [0, 1],
           "segmentation": {
             "binningdata": [
               {
