--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ run-material-composition:
     - hadd g4/geant4_material_tracks.root g4/geant4_material_tracks_*.root
     - pip install -r ci/requirements.txt
     - mkdir plots
-    - ci/make_material_plots.py ci/composition_config.json plots/layout.pdf
+    - ci/make_detector_plot.py ci/composition_config.json plots/layout.pdf
     - ci/material_composition.sh g4/geant4_material_tracks.root plots/material_composition.root
     - source /usr/local/bin/thisroot.sh
     - ci/make_material_plots.py plots/material_composition.root plots
