--- a/data/.gitattributes
+++ b/data/.gitattributes
@@ -1,2 +1,3 @@
 odd-material-maps.root filter=lfs diff=lfs merge=lfs -text
 odd-bfield.root filter=lfs diff=lfs merge=lfs -text
+odd-bfield.csv filter=lfs diff=lfs merge=lfs -text
